syntax = "proto3";

package accounts.accountsapi.v1;

import "buf/validate/validate.proto";
import "google/type/datetime.proto";
import "google/protobuf/any.proto";

service RegistrationService {
    rpc CreateAccount(CreateAccountRequest) returns (CreateAcountResponse) {}
}

// CreateAccountRequest defines the incoming data for the create account request
message CreateAccountRequest {
    string username = 1 [(buf.validate.field).string.min_len = 1];
    string email_address = 2 [(buf.validate.field).string.email = true];
    string common_id = 3 [(buf.validate.field).string.min_len = 1];
}

// CreateAcountResponse defines the response for the create account request
message CreateAcountResponse {
  bool is_success = 1;
}
